rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/Q2C_Demo_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Q2C Demo Settings</label>
</CustomObject>