rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <label>BaseURL</label>
    <type>Url</type>
</CustomField>