rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <defaultValue>$Organization.City</defaultValue>
    <label>Company City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>