rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Country__c</fullName>
    <defaultValue>$Organization.Country</defaultValue>
    <label>Company Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>