rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <defaultValue>&quot;info@&quot; +  SUBSTITUTE( $Organization.Name , &quot; &quot;, &quot;&quot;) + &quot;.com&quot;</defaultValue>
    <label>Company Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>