rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Fax__c.field-meta.xml
<CustomField>
    <fullName>Company_Fax__c</fullName>
    <defaultValue>$Organization.Fax</defaultValue>
    <label>Company Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>