rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Image_Height__c.field-meta.xml
<CustomField>
    <fullName>Company_Image_Height__c</fullName>
    <defaultValue>&quot;40px&quot;</defaultValue>
    <label>Company Image Height</label>
    <length>6</length>
    <type>Text</type>
</CustomField>