rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Image_URL__c</fullName>
    <defaultValue>&quot;https://c1.sfdcstatic.com/content/dam/web/en_us/www/images/nav/salesforce-cloud-logo-sm.png&quot;</defaultValue>
    <label>Company Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>