rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Image_Width__c.field-meta.xml
<CustomField>
    <fullName>Company_Image_Width__c</fullName>
    <defaultValue>&quot;auto&quot;</defaultValue>
    <label>Company Image Width</label>
    <length>6</length>
    <type>Text</type>
</CustomField>