rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <defaultValue>$Organization.Name</defaultValue>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>