rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <defaultValue>$Organization.Phone</defaultValue>
    <label>Company Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>