rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Postal_Code__c</fullName>
    <defaultValue>$Organization.PostalCode</defaultValue>
    <label>Company Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>