rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Company_Primary_Color__c</fullName>
    <defaultValue>&quot;21a0df&quot;</defaultValue>
    <label>Company Primary Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>