rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Slogan__c.field-meta.xml
<CustomField>
    <fullName>Company_Slogan__c</fullName>
    <defaultValue>&quot;Infinity. Beyond.&quot;</defaultValue>
    <label>Company Slogan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>