rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_State__c.field-meta.xml
<CustomField>
    <fullName>Company_State__c</fullName>
    <defaultValue>$Organization.State</defaultValue>
    <label>Company State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>