rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Company_Street__c.field-meta.xml
<CustomField>
    <fullName>Company_Street__c</fullName>
    <defaultValue>$Organization.Street</defaultValue>
    <label>Company Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>