rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Credit_Note_Line_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Line_Product_Name__c</fullName>
    <defaultValue>&quot;SLA Credit&quot;</defaultValue>
    <label>Credit Note Line Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>