rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Debit_Note_Line_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note_Line_Product_Name__c</fullName>
    <defaultValue>&quot;Late Fee&quot;</defaultValue>
    <label>Debit Note Line Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>