rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Delete_Contracted_Prices__c.field-meta.xml
<CustomField>
    <fullName>Delete_Contracted_Prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Contracted Prices in Deletion</label>
    <type>Checkbox</type>
</CustomField>