rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Discount_Variation__c.field-meta.xml
<CustomField>
    <fullName>Discount_Variation__c</fullName>
    <label>Average Discount (%)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>