rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Enforce_PO_Logic__c.field-meta.xml
<CustomField>
    <fullName>Enforce_PO_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Purchase Order Logic</label>
    <type>Checkbox</type>
</CustomField>