rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/InitBill__c.field-meta.xml
<CustomField>
    <fullName>InitBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InitBill?</label>
    <type>Checkbox</type>
</CustomField>