rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Master_Quote__c.field-meta.xml
<CustomField>
    <fullName>Master_Quote__c</fullName>
    <label>Master Quote (Record ID)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>