rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Records__c</fullName>
    <label>Quotes per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>