rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <defaultValue>&apos;Benchpre55!&apos;</defaultValue>
    <label>Approver Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>