rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Randomize_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Randomize_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Randomize Discounts</label>
    <type>Checkbox</type>
</CustomField>