rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Randomize_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Randomize_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Randomize Quantity</label>
    <type>Checkbox</type>
</CustomField>