rc/rc-utils/main/default/objects/Q2C_Demo_Settings__c/fields/Randomize_Term__c.field-meta.xml
<CustomField>
    <fullName>Randomize_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Randomize Term</label>
    <type>Checkbox</type>
</CustomField>